--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             the majority have suffered alteration in <br />some form, by
             injected humour, or randomised words which don't look even
           </p>
+          <button class="explore-btn-header">Explore More</button>
         </div>
         <div class="img">
           <img src="banner.png" alt="" />
